# Master-Thesis

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: eff_dl19_top10.yaml  eff_dl20_top10.yaml  eff_smoke.yaml  p1_smoke.yaml  pilot.yaml  pilot_qwen.yaml  rq1_dl19_top10.yaml  rq1_dl19_uniform.yaml  rq1_dl20_top10.yaml  rq1_dl20_uniform.yaml  rq2_dl19_top10.yaml  rq2_dl20_top10.yaml  rq3_pooled_top10.yaml  rq3_smoke.yaml  rq4_adequacy_top100.yaml  rq4_axioms.yaml  rq4_candidates_d0.yaml  rq4_soft_semantics_scifact_top10.yaml  rq4_soft_semantics_top100.yaml  rq5_surrogate.yaml  smoke.yaml
data/: README.md
docs/: literature-overview.md  phase0-design.md  phase0-implementation.md  phase0-plan.md  phase1-design.md  phase1-implementation.md  phase1-plan.md  phase2-design.md  phase2-implementation.md  phase2b-ranker-scale.md  phase3-adequacy-oracle.md  phase3-candidate-axiom-specs.md  phase3-confirmation-lock.yaml  phase3-confirmation-protocol.md  phase3-design.md  phase3-implementation.md  phase3-qualitative-casebook.md  research-logbook.md  research-plan.md
experiments/: README.md
models/: README.md
notebooks/: p0_pilot_overview.ipynb  p1_overview.ipynb  p2_overview.ipynb
results/: README.md
scripts/: add_rq4_axiom_columns.py  collect_bronze.py  run_phase0.sh  run_phase1.sh  run_phase1_agreement.sh  run_phase1_effectiveness.sh  run_phase2.sh  sanity_gate.py  snapshot_artifacts.py  verify_setup.py
tests/: test_adequacy_rerank.py  test_agreement.py  test_analysis.py  test_answering_axioms.py  test_axiom_process_determinism.py  test_axioms.py  test_candidate_registry.py  test_collect.py  test_config.py  test_confirmation.py  test_decomposition.py  test_openai_ranker.py  test_pairs.py  test_preferences.py  test_provenance.py  test_qualitative.py  test_ranking.py  test_relaxed.py  test_rq4.py  test_rq4_candidates.py  test_snapshot_artifacts.py  test_soft_semantics.py  test_stages.py  test_surrogate.py
thesis/: README.md  foundation-writeup.md  phase0-writeup.md  phase1-writeup.md  phase2-writeup.md
(+69 files in other folders)
